CB-20889: Improve rolling upgrade related event messages
In this commit I improved some event messages to see what kind of upgrade do we started.
I introduced separate message for:
- calling rolling upgrade command on CM
- regular OS upgrade
- rolling OS upgrade
- rolling runtime upgrade for DL cluster